# gatewayDemo/docs/swagger.yaml
@@ -1,4 +1,142 @@
 definitions:
+  dao.ServiceAccessControl:
+    properties:
+      black_list:
+        type: string
+      clientip_flow_limit:
+        type: integer
+      id:
+        type: integer
+      open_auth:
+        type: integer
+      service_flow_limit:
+        type: integer
+      service_id:
+        type: integer
+      white_host_home:
+        type: string
+      white_list:
+        type: string
+    type: object
+  dao.ServiceDetail:
+    properties:
+      access_control:
+        $ref: '#/definitions/dao.ServiceAccessControl'
+      gprc:
+        $ref: '#/definitions/dao.ServiceGRPCRule'
+      http:
+        $ref: '#/definitions/dao.ServiceHTTPRule'
+      info:
+        $ref: '#/definitions/dao.ServiceInfo'
+      load_balance:
+        $ref: '#/definitions/dao.ServiceLoadBalance'
+      tcp:
+        $ref: '#/definitions/dao.ServiceTCPRule'
+    type: object
+  dao.ServiceGRPCRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
+  dao.ServiceHTTPRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      need_https:
+        type: integer
+      need_strip_uri:
+        type: integer
+      need_websocket:
+        type: integer
+      rule:
+        type: string
+      rule_type:
+        type: integer
+      service_id:
+        type: integer
+      url_rewrite:
+        type: string
+    type: object
+  dao.ServiceInfo:
+    properties:
+      create_at:
+        type: string
+      id:
+        type: integer
+      is_delete:
+        type: integer
+      load_type:
+        type: integer
+      service_desc:
+        type: string
+      service_name:
+        type: string
+      update_at:
+        type: string
+    type: object
+  dao.ServiceLoadBalance:
+    properties:
+      check_interval:
+        type: integer
+      check_method:
+        type: integer
+      check_timeout:
+        type: integer
+      forbid_list:
+        type: string
+      id:
+        type: integer
+      ip_list:
+        type: string
+      round_type:
+        type: integer
+      service_id:
+        type: integer
+      upstream_connect_timeout:
+        type: integer
+      upstream_header_timeout:
+        type: integer
+      upstream_idle_timeout:
+        type: integer
+      upstream_max_idle:
+        type: integer
+      weight_list:
+        type: string
+    type: object
+  dao.ServiceTCPRule:
+    properties:
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
+  dto.AdminInfoOutput:
+    properties:
+      avator:
+        type: string
+      id:
+        type: integer
+      introduction:
+        type: string
+      login_time:
+        type: string
+      name:
+        type: string
+      roles:
+        items:
+          type: string
+        type: array
+    type: object
   dto.AdminLoginInput:
     properties:
       password:
@@ -39,6 +177,31 @@ definitions:
     - app_id
     - name
     type: object
+  dto.AppDeleteInput:
+    properties:
+      id:
+        description: 自增ID
+        type: integer
+    required:
+    - id
+    type: object
+  dto.AppListInput:
+    properties:
+      info:
+        description: 关键词
+        type: string
+      page_no:
+        description: 页数
+        example: 1
+        type: integer
+      page_size:
+        description: 每页条数
+        example: 20
+        type: integer
+    required:
+    - page_no
+    - page_size
+    type: object
   dto.AppUpdateInput:
     properties:
       app_id:
@@ -72,6 +235,37 @@ definitions:
     required:
     - originpassword
     - password
+    type: object
+  dto.DashServiceStatListOutput:
+    properties:
+      load_type:
+        type: integer
+      name:
+        type: string
+      value:
+        type: integer
+    type: object
+  dto.DashServiceStatOutput:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.DashServiceStatListOutput'
+        type: array
+      legend:
+        items:
+          type: string
+        type: array
+    type: object
+  dto.PanelGroupDataOutput:
+    properties:
+      app_num:
+        type: integer
+      current_qps:
+        type: integer
+      service_num:
+        type: integer
+      today_request_num:
+        type: integer
     type: object
   dto.ServiceAddGRPCInput:
     properties:
@@ -240,7 +434,7 @@ definitions:
           db.gateway_service_load_balance
           轮询方式 0=random 1=round_robin 2=wieght_round_robin 3=ip_hash
         type: integer
-      serbice_desc:
+      service_desc:
         description: 服务描述
         type: string
       service_flow_limit:
@@ -258,12 +452,41 @@ definitions:
         description: 白名单ip
         type: string
     required:
-    - forbid_list
     - ip_list
     - port
-    - serbice_desc
+    - service_desc
     - service_name
     - weight_list
+    type: object
+  dto.ServiceListInput:
+    properties:
+      info:
+        description: 关键词
+        type: string
+      page_no:
+        description: 页数
+        example: 1
+        type: integer
+      page_size:
+        description: 每页条数
+        example: 20
+        type: integer
+    required:
+    - page_no
+    - page_size
+    type: object
+  dto.ServiceStatOutput:
+    properties:
+      today:
+        description: 今日统计结果
+        items:
+          type: integer
+        type: array
+      yesterday:
+        description: 昨日统计结果
+        items:
+          type: integer
+        type: array
     type: object
   dto.ServiceUpdateGRPCInput:
     properties:
@@ -477,7 +700,6 @@ definitions:
         description: 白名单ip
         type: string
     required:
-    - forbid_list
     - id
     - ip_list
     - port
@@ -500,7 +722,6 @@ definitions:
     type: object
 info:
   contact: {}
-  license: {}
 paths:
   /admin_info/changepwd:
     post:
@@ -521,7 +742,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ChangePWDInput'
+              type: object
       summary: 管理员密码修改
       tags:
       - 管理员接口
@@ -544,7 +770,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AdminInfoOutput'
+              type: object
       summary: 管理员信息
       tags:
       - 管理员接口
@@ -567,7 +798,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AdminLoginInput'
+              type: object
       summary: 管理员登录
       tags:
       - 管理员接口
@@ -583,7 +819,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AdminLoginInput'
+              type: object
       summary: 管理员退出
       tags:
       - 管理员接口
@@ -606,7 +847,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AppAddInput'
+              type: object
       summary: 添加租户
       tags:
       - 租户管理
@@ -628,7 +874,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
       summary: 租户删除
       tags:
       - 租户管理
@@ -650,7 +901,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AppDeleteInput'
+              type: object
       summary: 租户信息
       tags:
       - 租户管理
@@ -681,7 +937,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AppListInput'
+              type: object
       summary: 租户列表
       tags:
       - 租户管理
@@ -703,7 +964,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
       summary: 租户统计
       tags:
       - 租户管理
@@ -726,7 +992,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AppUpdateInput'
+              type: object
       summary: 租户更新
       tags:
       - 租户管理
@@ -742,7 +1013,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceStatOutput'
+              type: object
       summary: 流量统计
       tags:
       - 大盘
@@ -758,7 +1034,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.PanelGroupDataOutput'
+              type: object
       summary: 指标统计
       tags:
       - 大盘
@@ -774,7 +1055,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.DashServiceStatOutput'
+              type: object
       summary: 服务统计
       tags:
       - 大盘rest
@@ -797,7 +1083,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceAddHTTPInput'
+              type: object
       summary: 添加GRPC服务
       tags:
       - 服务管理
@@ -820,7 +1111,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceAddHTTPInput'
+              type: object
       summary: 添加HTTP服务
       tags:
       - 服务管理
@@ -843,7 +1139,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceAddTCPInput'
+              type: object
       summary: 添加TCP服务
       tags:
       - 服务管理
@@ -865,7 +1166,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
       summary: 服务删除
       tags:
       - 服务管理
@@ -887,7 +1193,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dao.ServiceDetail'
+              type: object
       summary: 服务信息
       tags:
       - 服务管理
@@ -918,7 +1229,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceListInput'
+              type: object
       summary: 服务列表
       tags:
       - 服务管理
@@ -940,7 +1256,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceStatOutput'
+              type: object
       summary: 服务统计
       tags:
       - 服务管理
@@ -963,7 +1284,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceUpdateGRPCInput'
+              type: object
       summary: 修改GRPC服务
       tags:
       - 服务管理
@@ -986,7 +1312,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceUpdateHTTPInput'
+              type: object
       summary: 修改HTTP服务
       tags:
       - 服务管理
@@ -1009,7 +1340,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceUpdateTCPInput'
+              type: object
       summary: 修改TCP服务
       tags:
       - 服务管理
